design: alignment fix

--- a/src/components/WeeklyTasks/WeeklyTasks.css
+++ b/src/components/WeeklyTasks/WeeklyTasks.css
@@ -271,7 +271,6 @@
   margin-bottom: 0;
   border: 1px solid #dddddd;
   /* height: fit-content; */
-  align-self: flex-end;
   max-width: 400px;
 }
 
